dynawo-integration-tests/src/test/resources/error/eventModels.groovy
package error

Disconnect {
    staticId "L4032-4044"
    startTime 1.1
}
NodeFault {
    staticId "4032_401"
    startTime 1
    faultTime 0.1
    rPu 0.025
    xPu 0.025
}
